/**
 * @file Declaration of the Status enum
 *
 * @author REDACTED
 * @author REDACTED
 * @author Quentin Surdez
 */

#pragma once

/**
 * Enum to represent the status of the game
 */
enum Status {
   RUNNING,
   LOSE,
   WIN
};
