@startuml

' STATIC
' Generated by CTP - https://github.com/samuelroland/ctp

' Style
hide empty members
hide circle
skinparam classAttributeIconSize 0


' Additions

' REMOVE

' ENDSTATIC

' Objects

abstract class Action {
	+ Action(humanoid: const std::shared_ptr<Humanoid>&)
	+ ~Action()
	+ {abstract} execute(field: Field&): void
	+ getHumanoid_const(): std::shared_ptr<Humanoid>
}

enum Status {
    RUNNING,
    WIN,
    LOSE
}

class Bite {
	+ Bite(target: const std::shared_ptr<Humanoid>&)
	+ execute(field: Field&): void
}

class Buffy {
	+ Buffy(position: const Vec2D&)
	+ chooseAction(field: const Field&): std::unique_ptr<Action>
	+ getActionRange_const(): size_t
	+ getType(): std::string
	+ kill(field: Field&): void
}

class Field {
	- height_: size_t
	- width_: size_t
	- nbVampire_: size_t
	- nbHuman_: size_t
	- turn_: size_t
	+ Field(height: size_t, width: size_t, nbVampire: size_t, nbHuman: size_t)
	+ getTurn_const(): size_t
	+ nextTurn(): int
	+ findClosestHumanoid_const(hunter: const std::shared_ptr<Humanoid>&): std::shared_ptr<T>
	+ fieldToStringVector_const(): std::vector<std::vector<std::string>>
	+ getHeight_const(): size_t
	+ getWidth_const(): size_t
	+ vampireKilled(): void
	+ humanKilled(): void
	+ vampireBorn(): void
	+ aliveVampires_const(): bool
	+ aliveHumans_const(): bool
	+ isFinished_const(): Status
	+ getNbHuman_const(): size_t
	+ getNbVampire_const(): size_t
	+ addHumanoid(humanoid: const std::shared_ptr<Humanoid>&): void
}

class FieldController {
	- {static} COMMANDS: const std::map<std::string, Command>
	- {static} CORNER: const std::string
	- {static} HORIZONTAL_BORDER: const std::string
	- {static} VERTICAL_BORDER: const std::string
	- running: bool
	- initialNbHuman: size_t
	- initialNbVampire: size_t
	- handleCommand(command: const Command&): void
	- {static} printHorizontalBorder(field: const Field&, output: std::string&): void
	- {static} printVerticalBorder(field: const Field&, output: std::string&): void
	- {static} display(field: const Field&): void
	+ FieldController(field: Field&)
	+ {static} displayFieldToString(field: const Field&): std::string
	+ start(): void
	+ stop(): void
	+ nextTurn(): void
	+ FieldController()
}

class Human {
	+ Human(position: const Vec2D&)
	+ getType(): std::string
	+ chooseAction(field: const Field&): std::unique_ptr<Action>
	+ kill(field: Field&): void
}

abstract class Humanoid {
	- imAlive: bool
	+ Humanoid(position: const Vec2D&)
	+ ~Humanoid()
	+ {abstract} chooseAction(field: const Field&): std::unique_ptr<Action>
	+ setAction(field: const Field&): void
	+ executeAction(field: Field&): void
	+ isAlive_const(): bool
	+ {abstract} getType(): std::string
	+ getPosition_const(): Vec2D
	+ setPosition(newPos: const Vec2D&): void
	+ kill(field: Field&): void
	+ getActionRange_const(): size_t
}

class Kill {
	+ Kill(target: const std::shared_ptr<Humanoid>&)
	+ execute(field: Field&): void
}

class Move {
	- range_: size_t
	- {static}getPossiblePositions(position: const Vec2D&, field : const Field&): std::vector<Vec2D>
	+ execute(field: Field&): void
	+ Move(range: size_t, mover: const std::shared_ptr<Humanoid>&, target: std::optional<Vec2D>)
}

class Vampire {
	+ Vampire(position: const Vec2D&)
	+ getType(): std::string
	+ chooseAction(field: const Field&): std::unique_ptr<Action>
	+ kill(field: Field&): void
}

class FieldStatsCalculator {
	+ {static} simulate(height: size_t, width: size_t, nbVampire: size_t, nbHuman: size_t, nbSimulations: size_t): double
}

class Random {
	- {static} rng: std::mt19937
	+ {static} generate(min: int, max: int): int
	+ {static} generateFrom0(max: size_t): int
	+ {static} randomBool(): bool
}

class Vec2D {
	+ x: int
	+ y: int
	+ Vec2D(x_: int, y_: int)
	+ Vec2D()
	+ calculateDistance_const(other: const Vec2D&): size_t
	+ subtraction_const(other: const Vec2D&): Vec2D
	+ addition_const(other: const Vec2D&): Vec2D
	+ getDirection_const(other: const Vec2D&): Vec2D
	+ {static}getRandomPosition(maxX : size_t, maxY : size_t): Vec2D
}




' Inheritance relationships

Action <|-- Kill

Action <|-- Move

Humanoid <|-- Buffy

Humanoid <|-- Human

Humanoid <|-- Vampire

Kill <|-- Bite

' Relationships
Field "1" --> "*" Humanoid : list of humanoids
Action "0..1" <-- "0..1" Humanoid : next action
Vec2D "1" <-- "1" Humanoid : position
FieldController "1" --> "1" Field : current field
Move "0..1" --> "0..1" Vec2D : position of target
Humanoid "0..1" <-- "0..1" Action : humanoid

@enduml
